<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cindy.crn.delicacy_designer.createRecipe.CreateSecondFragment">

    <RelativeLayout
        android:id="@+id/create_title_bar2"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:background="#ffff7a37">

        <TextView
            android:id="@+id/create_recipe_cancel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#DDFFFFFF"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/create_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createRecipe"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#DDFFFFFF"
            android:textSize="22sp"
            />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/create_title_bar2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
    <EditText
        style="@style/my_edittext_style2"
        android:id="@+id/recipeNameShow"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:text="@string/inputNameHint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:textSize="20sp"
        android:padding="5dp"
        android:alpha="1"></EditText>
    <EditText
        style="@style/my_edittext_style"
        android:id="@+id/descriptionInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="top"
        android:singleLine="false"
        android:layout_below="@id/recipeNameShow"
        android:hint="@string/descriptionHint"
        android:alpha="1"></EditText>

    <TextView
        android:id="@+id/materialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:layout_below="@id/descriptionInput"
        android:layout_alignLeft="@id/descriptionInput"
        android:textSize="22sp"
        android:layout_marginTop="8dp"/>
    <ImageView
        android:id="@+id/plusMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/materialText"
        android:layout_below="@id/descriptionInput"
        android:layout_alignBottom="@id/materialText"
        android:layout_marginLeft="20dp"
        android:src="@drawable/plus"
        />
            <View
                android:layout_width="match_parent"
                android:layout_height="2.0dip"
                android:background="@drawable/ic_shelf_category_divider" />
      <com.cindy.crn.delicacy_designer.MyListView
          android:id="@+id/materialList"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/materialText"
          android:layout_marginTop="5dp"
          android:layout_centerHorizontal="true"
          android:layout_alignLeft="@id/materialText"
          android:layout_alignRight="@id/descriptionInput"/>
            <View
                android:layout_width="240dip"
                android:layout_height="2.0dip"
                android:background="@drawable/ic_shelf_category_divider" />
      <com.cindy.crn.delicacy_designer.MyListView
          android:id="@+id/stepList"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/materialList"
          android:layout_marginTop="5dp"
          android:layout_centerHorizontal="true"
          android:layout_alignLeft="@id/materialText"
          android:layout_alignRight="@id/descriptionInput"
          />
      <Button
          android:id="@+id/addStep"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:layout_below="@id/stepList"
          android:layout_marginTop="5dp"
          android:layout_alignLeft="@id/materialText"
          android:text="@string/addStep"
          android:textColor="#ffffff"
          android:background="#ffff7a37"/>
      <Button
          android:id="@+id/addToDraft"
          android:layout_width="170dp"
          android:layout_height="wrap_content"
          android:layout_below="@id/stepList"
          android:layout_toRightOf="@id/addStep"
          android:layout_alignRight="@id/descriptionInput"
          android:layout_marginLeft="35dp"
          android:layout_marginTop="5dp"
          android:text="@string/addToDraft"
          android:textColor="#ffffff"
          android:background="#ffff7a37"/>
    <Button
        android:id="@+id/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addStep"
        android:layout_alignLeft="@id/addStep"
        android:layout_alignRight="@id/addToDraft"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/publish"
        android:textColor="#ffffff"
        android:background="#ffff7a37"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
